--- a/app/src/main/res/layout/activity_continuous.xml
+++ b/app/src/main/res/layout/activity_continuous.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ContinuousLocActivity">
 
     <TextView
         android:id="@+id/intro_label"
@@ -74,19 +74,6 @@
         app:layout_constraintStart_toEndOf="@id/accuracy_label"
         app:layout_constraintTop_toTopOf="@id/accuracy_label" />
 
-    <Button
-        android:id="@+id/record_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/record_button_text"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
-        android:onClick="recordClick"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/accuracy_label"
-        />
-
     <TextView
         android:id="@+id/history_label"
         android:layout_width="match_parent"
@@ -97,7 +84,7 @@
         android:layout_marginEnd="12dp"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/record_button" />
+        app:layout_constraintTop_toBottomOf="@id/accuracy_label" />
 
     <LinearLayout
         android:id="@+id/history_header"
