--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,158 +7,39 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/intro_label"
+        android:id="@+id/selectText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:text="@string/intro_label"
-        android:textSize="24sp"
+        android:text="How would you like to record your location?"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/onDemand"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/lat_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:text="@string/lat_label"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/intro_label" />
-
-    <TextView
-        android:id="@+id/latitude"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="@string/na"
-        app:layout_constraintStart_toEndOf="@id/lat_label"
-        app:layout_constraintTop_toTopOf="@id/lat_label" />
-
-    <TextView
-        android:id="@+id/long_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:text="@string/long_label"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lat_label" />
-
-    <TextView
-        android:id="@+id/longitude"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="@string/na"
-        app:layout_constraintStart_toEndOf="@id/long_label"
-        app:layout_constraintTop_toTopOf="@id/long_label" />
-
-
-    <TextView
-        android:id="@+id/accuracy_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:text="@string/accuracy_label"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/long_label" />
-
-    <TextView
-        android:id="@+id/acc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="@string/na"
-        app:layout_constraintStart_toEndOf="@id/accuracy_label"
-        app:layout_constraintTop_toTopOf="@id/accuracy_label" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
-        android:id="@+id/record_button"
+        android:id="@+id/onDemand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/record_button_text"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
-        android:onClick="recordClick"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="12dp"
+        android:onClick="clickOnDemand"
+        android:text="On Demand"
+        app:layout_constraintBottom_toTopOf="@id/continous"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/accuracy_label"
-        />
-
-    <TextView
-        android:id="@+id/history_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/history_label"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/record_button" />
+        app:layout_constraintTop_toBottomOf="@id/selectText" />
 
-    <LinearLayout
-        android:id="@+id/history_header"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/continous"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="6dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/history_label">
-
-        <TextView
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:text="@string/id_header"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="115dp"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:layout_marginStart="12dp"
-            android:text="@string/time_header"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:gravity="end"
-            android:text="@string/lat_header"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:gravity="end"
-            android:text="@string/lon_header"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:gravity="end"
-            android:text="@string/acc_header"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:fadeScrollbars="false"
-        android:scrollbars="vertical"
+        android:layout_margin="12dp"
+        android:onClick="clickContinuous"
+        android:text="Continuously"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/history_header" />
-
+        app:layout_constraintTop_toBottomOf="@id/onDemand" />
 </androidx.constraintlayout.widget.ConstraintLayout>
